methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:10: error: not found: type c
def faireDess(Color:c){
                    ^PatternPicture:12: error: not found: value setColor
  setColor(c)
  ^PatternPicture:12: error: not found: value c
  setColor(c)
           ^